Updated max width for logo, attempted fix for modal scrolling on ios

--- a/static/styles.css
+++ b/static/styles.css
@@ -49,7 +49,7 @@
     }
 
     .app-title img {
-        width: 27em;
+        width: 100%;
     }
 }
 
@@ -886,6 +886,7 @@ label {
     width: 100%;
     height: 100%;
     overflow: auto;
+    -webkit-overflow-scrolling: touch;
     background-color: rgb(0,0,0);
     background-color: rgba(0,0,0,0.4);
 }
